added vision div

--- a/index.html
+++ b/index.html
@@ -24,8 +24,42 @@
             </div>
             <img src="assets/hero.png" alt="">
         </div>
-
     </header>
+    <main>
+        <section class="visions">
+            <h3 class="section-title fira-sans-bold">The Vision of Future</h3>
+            <p class="section-description fira-sans-regular">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <div class="vision-container">
+                <div class="vision-1">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="vision-title fira-sans-bold">Digital Transformation</h4>
+                    <p class="vision-description fira-sans-regular">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button class="btn-secondary-1 fira-sans-semibold">Learn More</button>
+                </div>
+                <div class="vision-2">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="vision-title fira-sans-bold">Green Energy</h4>
+                    <p class="vision-description fira-sans-regular">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <button class="btn-secondary-2 fira-sans-semibold">Learn More</button>
+                </div>
+                <div class="vision-3">
+                    <img src="assets/card-icon.png" alt="">
+                    <h4 class="vision-title fira-sans-bold">Modern Infrastructure</h4>
+                    <p class="vision-description fira-sans-regular">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <button class="btn-secondary-3 fira-sans-semibold">Learn More</button>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <h3 class="section-title fira-sans-bold">Recent News</h3>
+            <p class="section-description fira-sans-regular">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <article>
+                <img src="assets/satelite.png" alt="">
+                <h2>Bangladesh Launches New Satellite</h2>
+            </article>
+        </section>
+    </main>
 </body>
 
 </html>
